new annotation: CommandPriority